feat: refactor Helm chart to use vs-agent as dependency and inline env config
- Replaced embedded vs-agent deployment with dependency on vs-agent-chart (via OCI) - Updated all components to use direct `env` and `secretKeyRef` variables instead of ConfigMaps - Refactored StatefulSets for chatbot, stats, artemis, postgres, and redis accordingly - Removed vs-agent template from templates/ folder - Verified and aligned values.yaml with new structure - Updated README.md with latest chart structure and env handling per component

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,6 +1,10 @@
 apiVersion: v2
 name: hologram-welcome-ai-agent-chart
-description: Helm chart for hologram-welcome-ai-agent
-type: application
 version: 1.3.2
 appVersion: '1.3.2'
+description: Helm chart for hologram-welcome-ai-agent
+dependencies:
+  - name: vs-agent-chart
+    version: v1.3.2
+    repository: oci://registry-1.docker.io/io2060
+    condition: vs-agent-chart.enabled
