--- a/charts/templates/artemis-deployment.yaml
+++ b/charts/templates/artemis-deployment.yaml
@@ -2,14 +2,16 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.artemis.envFrom.secret | quote }}
+  name: artemis-secret
   namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
-  {{- range $key, $val := .Values.artemis.secret }}
-  {{ $key }}: {{ tpl $val $ | quote }}
+  {{- range .Values.artemis.secret }}
+  {{ .name }}: {{ tpl .value $ | quote }}
   {{- end }}
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -42,7 +44,7 @@ metadata:
     app.kubernetes.io/component: artemis
     {{- include "chatbot.labels" . | nindent 4 }}
 spec:
-  serviceName: {{ include "chatbot.fullname" . }}-artemis   # headless para stable DNS
+  serviceName: {{ include "chatbot.fullname" . }}-artemis
   replicas: 1
   selector:
     matchLabels:
@@ -54,17 +56,14 @@ spec:
         app.kubernetes.io/component: artemis
         {{- include "chatbot.selectorLabels" . | nindent 8 }}
     spec:
-      securityContext:       
-        fsGroup: 1000 
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: artemis
-          image: pache/activemq-artemis:2.41.0
+          image: apache/activemq-artemis:2.41.0
           imagePullPolicy: {{ .Values.artemis.image.pullPolicy }}
           resources:
             {{- toYaml .Values.artemis.resources | nindent 12 }}
-          envFrom:
-            - secretRef:
-                name: {{ .Values.artemis.envFrom.secret | quote }}
           ports:
             - containerPort: {{ .Values.artemis.service.ports.amqp }}
               name: amqp
@@ -72,6 +71,18 @@ spec:
               name: core
             - containerPort: {{ .Values.artemis.service.ports.web }}
               name: web
+          env:
+            {{- range .Values.artemis.env }}
+            - name: {{ .name }}
+              value: {{ .value | quote }}
+            {{- end }}
+            {{- range .Values.artemis.secret }}
+            - name: {{ .name }}
+              valueFrom:
+                secretKeyRef:
+                  name: artemis-secret
+                  key: {{ .name }}
+            {{- end }}
           volumeMounts:
             - name: pvc-{{ include "chatbot.fullname" . }}-artemis
               mountPath: {{ .Values.artemis.storage.mountPath }}
