--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: hologram-welcome-ai-agent-chart
 version: 1.3.2
 appVersion: '1.3.2'
-description: Helm chart for hologram-welcome-ai-agent
+description: Helm chart to deploy Hologram Welcome AI Agent Verifiable Service
 dependencies:
   - name: vs-agent-chart
     version: v1.3.2
