--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,79 +1,75 @@
 name: Continuous Deployment
 
+env:
+  IMAGE_NAME: hologram-welcome-ai-agent-app
+
 on:
   push:
-    branches:
-      - main
-      - 'release/**'
-  workflow_dispatch:
-    inputs:
-      force_build:
-        description: 'Force build and push'
-        required: false
-        default: 'false'
+    branches: [main]
 
 permissions:
   contents: write
-  issues: write
   pull-requests: write
 
-env:
-  DH_USERNAME: ${{ secrets.DOCKER_HUB_LOGIN }}
-  DH_TOKEN: ${{ secrets.DOCKER_HUB_PWD }}
-  IMAGE_NAME: 'hologram-welcome-ai-agent'
-
 jobs:
-  release:
+  publish_image:
     runs-on: ubuntu-latest
-    outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
-      tag_name: ${{ steps.release.outputs.tag_name }}
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Run Release Please
-        id: release
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
+
+      - name: Process Release Please
         uses: googleapis/release-please-action@v4
+        id: release-please
         with:
-          release-type: node
-          token: ${{ secrets.GITHUB_TOKEN }}
-          manifest-file: .release-please-manifest.json
           config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-  build-and-push:
-    needs: release
-    if: needs.release.outputs.release_created == 'true' || github.event.inputs.force_build == 'true'
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-
-      - name: Extract Version from Release or Git Tags
+      - name: Print release outputs for debugging
+        continue-on-error: true
         run: |
-          if [[ "${{ needs.release.outputs.release_created }}" == "true" ]]; then
-            echo "RELEASE_VERSION=${{ needs.release.outputs.tag_name }}" >> $GITHUB_ENV
-          else
-            LAST_TAG=$(git tag --sort=-v:refname | head -n 1)
-            echo "RELEASE_VERSION=$LAST_TAG" >> $GITHUB_ENV
-          fi
-
-      - name: Display Release Version
-        run: echo "Building version $RELEASE_VERSION (force_build=${{ github.event.inputs.force_build }})"
+          echo "Release outputs:"
+          echo "${{ toJson(steps.release-please.outputs) }}"
 
       - name: Log in to Docker Hub
-        run: echo "$DH_TOKEN" | docker login -u "$DH_USERNAME" --password-stdin
+        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_LOGIN }}
+          password: ${{ secrets.DOCKER_HUB_PWD }}
 
-      - name: Build Docker Image
-        run: docker build -f Dockerfile -t $DH_USERNAME/$IMAGE_NAME:$RELEASE_VERSION .
+      - name: Set up Docker Buildx
+        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
+        uses: docker/setup-buildx-action@v3
 
-      - name: Push Docker Image to Docker Hub
+      - name: Build and push
+        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_HUB_LOGIN }}/${{ env.IMAGE_NAME }}:dev,
+            ${{ secrets.DOCKER_HUB_LOGIN }}/${{ env.IMAGE_NAME }}:${{ steps.release-please.outputs.tag_name }}
+
+      - name: Log in to Docker Hub Helm Registry
+        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
         run: |
-          docker tag $DH_USERNAME/$IMAGE_NAME:$RELEASE_VERSION $DH_USERNAME/$IMAGE_NAME:latest
-          docker push $DH_USERNAME/$IMAGE_NAME:$RELEASE_VERSION
-          docker push $DH_USERNAME/$IMAGE_NAME:latest
+          echo "${{ secrets.DOCKER_HUB_PWD }}" | helm registry login -u "${{ secrets.DOCKER_HUB_LOGIN }}" --password-stdin docker.io
+
+      - name: Push Helm chart to Docker Hub OCI repo
+        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
+        env:
+          IMAGE_TAG: ${{ steps.release-please.outputs.tag_name }}
+        run: |
+          sed -i "s/^version:.*/version: $IMAGE_TAG/" ./charts/Chart.yaml
+          CHART_NAME=$(grep '^name:' ./charts/Chart.yaml | awk '{print $2}')
+          helm dependency update ./charts
+          helm package ./charts -d ./charts
+          helm push ./charts/$CHART_NAME-$IMAGE_TAG.tgz oci://docker.io/"${{ secrets.DOCKER_HUB_LOGIN }}"
