--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,75 +1,116 @@
 name: Continuous Deployment
 
-env:
-  IMAGE_NAME: hologram-welcome-ai-agent-app
-
 on:
   push:
-    branches: [main]
+    branches: [main, 'release/**']
 
-permissions:
-  contents: write
-  pull-requests: write
+  workflow_dispatch:
+
+env:
+  DH_USERNAME: ${{secrets.DOCKER_HUB_LOGIN}}
+  DH_TOKEN: ${{secrets.DOCKER_HUB_PWD}}
+  IMAGE_NAME: hologram-welcome-ai-agent-app
+  IMAGE_TAG: ${{ github.ref == 'refs/heads/main' && 'dev' || github.ref }}
 
 jobs:
-  publish_image:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout hologram-welcome-ai-agent-vs
         uses: actions/checkout@v4
 
       - name: Setup Helm
         uses: azure/setup-helm@v3
 
-      - name: Process Release Please
-        uses: googleapis/release-please-action@v4
-        id: release-please
+      - name: Setup Node.js v22
+        uses: actions/setup-node@v4
         with:
-          config-file: release-please-config.json
-          manifest-file: .release-please-manifest.json
-          token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 22
 
-      - name: Print release outputs for debugging
-        continue-on-error: true
-        run: |
-          echo "Release outputs:"
-          echo "${{ toJson(steps.release-please.outputs) }}"
+      - name: Enable corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - uses: codfish/semantic-release-action@v3
+        id: semantic
+        with:
+          branches: |
+            [
+              'release',
+              { 
+                name: 'main',
+                prerelease: 'dev'
+              }
+            ]
+          plugins: |
+            [
+              [
+                "@semantic-release/commit-analyzer",
+                {
+                  "preset": "angular",
+                  "releaseRules": [
+                    {
+                      "type": "refactor",
+                      "release": "patch"
+                    }
+                  ]
+                }
+              ],
+              [
+                "@semantic-release/npm",
+                {
+                  "npmPublish": false
+                }
+              ],
+              "@semantic-release/release-notes-generator",
+            ]
 
       - name: Log in to Docker Hub
-        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_LOGIN }}
-          password: ${{ secrets.DOCKER_HUB_PWD }}
+        if: steps.semantic.outputs.new-release-published == 'true'
+        run: |
+          echo "$DH_TOKEN" | docker login -u "$DH_USERNAME" --password-stdin
 
-      - name: Set up Docker Buildx
-        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
-        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image
+        if: steps.semantic.outputs.new-release-published == 'true'
+        run: |
+          docker build -f Dockerfile -t $DH_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
 
-      - name: Build and push
-        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_HUB_LOGIN }}/${{ env.IMAGE_NAME }}:dev,
-            ${{ secrets.DOCKER_HUB_LOGIN }}/${{ env.IMAGE_NAME }}:${{ steps.release-please.outputs.tag_name }}
+      - name: Add tags to Docker image and push to Docker Hub
+        if: steps.semantic.outputs.new-release-published == 'true'
+        run: |
+          docker tag $DH_USERNAME/$IMAGE_NAME:$IMAGE_TAG $DH_USERNAME/$IMAGE_NAME:v${RELEASE_MAJOR}-$IMAGE_TAG
+          docker tag $DH_USERNAME/$IMAGE_NAME:$IMAGE_TAG $DH_USERNAME/$IMAGE_NAME:v${RELEASE_MAJOR}.${RELEASE_MINOR}-$IMAGE_TAG
+          docker tag $DH_USERNAME/$IMAGE_NAME:$IMAGE_TAG $DH_USERNAME/$IMAGE_NAME:v${RELEASE_MAJOR}.${RELEASE_MINOR}.${RELEASE_PATCH:0:1}-$IMAGE_TAG
+          docker tag $DH_USERNAME/$IMAGE_NAME:$IMAGE_TAG $DH_USERNAME/$IMAGE_NAME:v$RELEASE_VERSION
+          docker push $DH_USERNAME/$IMAGE_NAME:$IMAGE_TAG
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR-$IMAGE_TAG
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR.$RELEASE_MINOR-$IMAGE_TAG
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR.$RELEASE_MINOR.${RELEASE_PATCH:0:1}-$IMAGE_TAG
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_VERSION
+
+      - name: Add tags to Docker image and push to Docker Hub (specific to releases)
+        if: github.ref == 'refs/heads/release' && steps.semantic.outputs.new-release-published == 'true'
+        run: |
+          docker tag $DH_USERNAME/$IMAGE_NAME:${GITHUB_REF##*/} $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR
+          docker tag $DH_USERNAME/$IMAGE_NAME:${GITHUB_REF##*/} $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR.$RELEASE_MINOR
+          docker tag $DH_USERNAME/$IMAGE_NAME:${GITHUB_REF##*/} $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR.${RELEASE_MINOR}.${RELEASE_PATCH:0:1}
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR.$RELEASE_MINOR
+          docker push $DH_USERNAME/$IMAGE_NAME:v$RELEASE_MAJOR.$RELEASE_MINOR.${RELEASE_PATCH:0:1}
 
       - name: Log in to Docker Hub Helm Registry
-        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
+        if: steps.semantic.outputs.new-release-published == 'true'
         run: |
-          echo "${{ secrets.DOCKER_HUB_PWD }}" | helm registry login -u "${{ secrets.DOCKER_HUB_LOGIN }}" --password-stdin docker.io
+          echo "$DH_TOKEN" | helm registry login -u "$DH_USERNAME" --password-stdin docker.io
 
       - name: Push Helm chart to Docker Hub OCI repo
-        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
-        env:
-          IMAGE_TAG: ${{ steps.release-please.outputs.tag_name }}
+        if: steps.semantic.outputs.new-release-published == 'true'
         run: |
-          sed -i "s/^version:.*/version: $IMAGE_TAG/" ./charts/Chart.yaml
+          sed -i "s/^version:.*/version: v$RELEASE_VERSION/" ./charts/Chart.yaml
           CHART_NAME=$(grep '^name:' ./charts/Chart.yaml | awk '{print $2}')
           helm dependency update ./charts
           helm package ./charts -d ./charts
-          helm push ./charts/$CHART_NAME-$IMAGE_TAG.tgz oci://docker.io/"${{ secrets.DOCKER_HUB_LOGIN }}"
+          helm push ./charts/$CHART_NAME-v$RELEASE_VERSION.tgz oci://docker.io/$DH_USERNAME
