fix: fix image chatbot template
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/charts/templates/chatbot-deployment.yaml
+++ b/charts/templates/chatbot-deployment.yaml
@@ -73,7 +73,7 @@ spec:
     spec:
       containers:
         - name: chatbot
-          image: io2060/hologram-welcome-ai-agent-app:{{ .Chart.AppVersion }}
+          image: io2060/hologram-welcome-ai-agent-app:{{ .Chart.Version }}
           imagePullPolicy: {{ .Values.chatbot.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.chatbot.service.port }}
