--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   chatbot:
     build: .
-    container_name: hologram-welcome-ai-agent
+    container_name: hologram-generic-ai-agent
     depends_on:
       - redis
       - artemis
@@ -54,7 +54,7 @@ services:
       - chatbot
 
   vs-agent:
-    image: io2060/2060-service-agent:v1.2.1-dev.1
+    image: io2060/vs-agent:v1.5.5
     container_name: chatbot-vs-agent
     restart: always
     depends_on:
