--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hologram-welcome-ai-agent-vs",
+  "name": "hologram-generic-ai-agent-vs",
   "version": "1.7.0",
   "description": "",
   "author": "",
@@ -22,9 +22,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@2060.io/vs-agent-nestjs-client": "^1.3.0",
+    "@2060.io/vs-agent-nestjs-client": "1.5.5",
     "@anthropic-ai/sdk": "^0.51.0",
-    "@credo-ts/core": "^0.5.11",
+    "@credo-ts/core": "^0.5.18",
     "@langchain/anthropic": "^0.3.21",
     "@langchain/community": "^0.3.43",
     "@langchain/core": "^0.3.57",
