--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -71,6 +71,21 @@ chatbot:
       value: 'http://example-stats:8700/stats/view'
     - name: STATISTICS_REQUIRE_AUTH
       value: 'true'
+  agentPack:
+    enabled: true
+    name: custom-pack
+    mountPath: ''
+    fileName: agent-pack.yaml
+    existingConfigMap: ''
+    content: |
+      metadata:
+        id: custom-pack
+        displayName: Custom Pack
+        defaultLanguage: en
+      languages:
+        en:
+          greetingMessage: "Welcome to your custom agent!"
+          systemPrompt: "You are a helpful agent."
   secret:
     OPENAI_API_KEY: 'sk-example-openai-api-key'
     POSTGRES_PASSWORD: 'example-db-password'
