chore: Update docker compose with new enviroments
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,18 @@ services:
       - redis
       - artemis
     environment:
-      AGENT_PACK_PATH: /app/agent-packs/customer-service
+      AGENT_PACK_PATH: ${AGENT_PACK_PATH}
       APP_PORT: ${APP_PORT}
       LOG_LEVEL: ${LOG_LEVEL}
       VECTOR_STORE: ${VECTOR_STORE}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+      OPENAI_TEMPERATURE: ${OPENAI_TEMPERATURE}
+      OPENAI_MAX_TOKENS: ${OPENAI_MAX_TOKENS}
       AGENT_MEMORY_BACKEND: ${AGENT_MEMORY_BACKEND}
       REDIS_URL: ${REDIS_URL}
       AGENT_MEMORY_WINDOW: ${AGENT_MEMORY_WINDOW}
       LLM_PROVIDER: ${LLM_PROVIDER}
+      OPENAI_MODEL: ${OPENAI_MODEL}
       RAG_PROVIDER: ${RAG_PROVIDER}
       RAG_DOCS_PATH: ${RAG_DOCS_PATH}
       RAG_REMOTE_URLS: ${RAG_REMOTE_URLS}
