chore: Update helm chart with new enviroments
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -21,7 +21,13 @@ chatbot:
     - name: LLM_PROVIDER
       value: 'openai'
     - name: OPENAI_MODEL
-      value: 'gpt-4'
+      value: 'gpt-4o-mini'
+    - name: OPENAI_TEMPERATURE
+      value: '0.3'
+    - name: OPENAI_MAX_TOKENS
+      value: '512'
+    - name: AGENT_PACK_PATH
+      value: '/app/agent-packs/custom-pack'
     - name: VECTOR_STORE
       value: 'redis'
     - name: VECTOR_INDEX_NAME
