feat: Update Generic AI Agent chart to use VS Agent 1.5.6
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/charts/templates/chatbot-deployment.yaml
+++ b/charts/templates/chatbot-deployment.yaml
@@ -41,6 +41,7 @@ spec:
   selector:
     app.kubernetes.io/component: chatbot
     {{- include "chatbot.selectorLabels" . | nindent 4 }}
+{{- if .Values.chatbot.ingress.enabled }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -66,6 +67,7 @@ spec:
                 name: {{ include "chatbot.fullname" . }}-chatbot
                 port:
                   number: {{ .Values.chatbot.service.port }}
+{{- end }}
 ---
 apiVersion: apps/v1
 kind: StatefulSet
