--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -5,6 +5,6 @@ appVersion: '1.3.2'
 description: Helm chart to deploy Hologram Generic AI Agent Verifiable Service
 dependencies:
   - name: vs-agent-chart
-    version: v1.5.8
+    version: v1.6.0-dev
     repository: oci://registry-1.docker.io/io2060
     condition: vs-agent-chart.enabled
