--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,6 +1,9 @@
 global:
   domain: dev.2060.io
 
+# Example to match legacy naming from the reviewer:
+agentNameOverride: 'hologram-welcome-ai-agent'
+
 chatbot:
   name: chatbot
   replicas: 1
