--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -5,6 +5,6 @@ appVersion: '1.3.2'
 description: Helm chart to deploy Hologram Generic AI Agent Verifiable Service
 dependencies:
   - name: vs-agent-chart
-    version: v1.6.0
-    repository: oci://registry-1.docker.io/io2060
+    version: v1.7.0
+    repository: oci://registry-1.docker.io/veranalabs
     condition: vs-agent-chart.enabled
