fix: charts update vs agent image
Signed-off-by: andres vallecilla <andresfelipe083195@hotmail.com>

--- a/charts/templates/chatbot-deployment.yaml
+++ b/charts/templates/chatbot-deployment.yaml
@@ -92,7 +92,7 @@ spec:
     spec:
       containers:
         - name: chatbot
-          image: io2060/hologram-generic-ai-agent-app:{{ .Chart.Version }}
+          image: {{ .Values.image.repository | default "io2060/hologram-generic-ai-agent-app" }}:{{ .Values.image.tag | default .Chart.Version }}
           imagePullPolicy: {{ .Values.chatbot.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.chatbot.service.port }}
